--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, collapse = TRUE, 
-                      fig.width = 9, fig.height = 15)
+                      fig.width = 10, fig.height = 6)
 ```
 
 ## Demo
@@ -30,7 +30,7 @@ table(compas$Two_yr_Recidivism, compas$Ethnicity)
 m <- glm(Two_yr_Recidivism ~ ., data = compas, family = "binomial")
 # Extracted predicted risk and observations from test data.
 # If not specified, the best threshold in ROC analysis is used.
-x <- evaluate_prediction(
+x <- evaluate_prediction_prob(
   y_pred = predict(m, newdata = compas, type = "response"), 
   y_obs = compas$Two_yr_Recidivism, y_pos = "1",
   sens_var = compas$Ethnicity, sens_var_ref = "Caucasian"
@@ -38,27 +38,21 @@ x <- evaluate_prediction(
 x_plots <- plot(x)
 ```
 
-Compiled plot can be retrieved from:
-
-```{r, eval=FALSE}
-x_plots$overall
-```
-
 ### Details on return values
 
 `seeBias` object:
 
 ```{r}
-x$df_prob
-x$df_metrics
-x$df_auc
-x$df_calib
-head(x$df_roc)
+x$fairness_evaluation$df_prob
+x$fairness_evaluation$df_metrics
+x$fairness_evaluation$df_auc
+x$fairness_evaluation$df_calib
+head(x$fairness_evaluation$df_roc)
 ```
 
 Individual plots:
 
-```{r, fig.width=10, fig.height=6}
+```{r}
 x_plots$metrics
 ```
 
@@ -72,11 +66,37 @@ x_plots$score
 ### Multiple sensitive variables
 
 ```{r}
-x2 <- evaluate_prediction(
+x2 <- evaluate_prediction_prob(
   y_pred = predict(m, newdata = compas, type = "response"), 
   y_obs = compas$Two_yr_Recidivism, y_pos = "1",
   sens_var = cbind(as.character(compas$Ethnicity), as.character(compas$Sex)), 
   sens_var_ref = c("Caucasian", "Male")
 )
-x_plots <- plot(x2, heights = c(2.5, 1, 1), print_statistics = FALSE)
+x_plots2 <- plot(x2, print_statistics = FALSE)
+```
+
+```{r, fig.width=4, fig.height=4}
+x_plots2$roc
+x_plots2$calibration_in_large
+x_plots2$calibration
+x_plots2$score
+```
+
+### Specify predicted scores
+
+```{r}
+x3 <- evaluate_prediction_score(
+  y_pred = predict(m, newdata = compas), 
+  y_obs = compas$Two_yr_Recidivism, y_pos = "1",
+  sens_var = cbind(as.character(compas$Ethnicity), as.character(compas$Sex)), 
+  sens_var_ref = c("Caucasian", "Male")
+)
+x_plots3 <- plot(x3, print_statistics = FALSE)
+```
+
+```{r, fig.width=4, fig.height=4}
+x_plots3$roc
+x_plots3$calibration_in_large
+x_plots3$calibration
+x_plots3$score
 ```
